fixing text overflow on cards and card design

--- a/style.css
+++ b/style.css
@@ -10,13 +10,20 @@ body {
 
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 40%;
+    border-radius: 1em 1em 1em 1em;
+    transition: 0.5s;
     background-color: #E1F7F5;
+    padding: 1em;
+    font-size: 28px;
+    min-width: 10em;
+}
+
+p {
+    font-size: 5em;
+    text-align: center;
 }
 
 .button {
-    display: flex;
     flex-direction: row;
 }
 
@@ -25,9 +32,4 @@ body {
     padding: 1em;
     background-color: #1E0342;
     color: white;
-}
-
-p {
-    font-size: 100px;
-    text-align: center;
 }
